@@ -284,6 +284,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA 80i    (EXPERIMENTAL)
        Canon PIXMA 450i   (EXPERIMENTAL)
        Canon PIXMA 455i   (EXPERIMENTAL)
+       Canon PIXMA 470PD  (EXPERIMENTAL)
+       Canon PIXMA 475PD  (EXPERIMENTAL)
        Canon PIXMA 550i   (EXPERIMENTAL)
        Canon PIXMA 850i   (EXPERIMENTAL)
        Canon PIXMA 6100i  (EXPERIMENTAL)
@@ -292,6 +294,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i450   (EXPERIMENTAL)
        Canon PIXMA i455   (EXPERIMENTAL)
        Canon PIXMA i470D  (EXPERIMENTAL)
+       Canon PIXMA i475D  (EXPERIMENTAL)
        Canon PIXMA i550   (EXPERIMENTAL)
        Canon PIXMA i900D  (EXPERIMENTAL)
        Canon PIXMA i950   (EXPERIMENTAL)
